chat spacing fixed

--- a/app/assets/stylesheets/components/_chats.scss
+++ b/app/assets/stylesheets/components/_chats.scss
@@ -32,3 +32,7 @@ color: inherit;
 #messages {
 margin-top: 10px
 }
+
+.single-message {
+  margin-bottom: 20px;
+}
