--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -9,8 +9,8 @@
 }
 
 .chat-container {
+  padding-left: 20px;
   width: 100%;
-  margin: 0 auto;
   background: #FFFFFF;
   box-shadow: 20px -20px 20px rgba(0, 0, 0, 0.0796252);
   border-top-left-radius: 25px;
@@ -49,21 +49,21 @@
 }
 
 .stick {
-  bottom: 75px;
+  bottom: 175px;
 }
 
 .simple_form {
-  bottom: 75px;
+  bottom: 175px;
 }
 
-#new-message {
+.simple_form.new_message {
   position: fixed;
   bottom: 75px;
   left: 0;
   right: 0;
   background: white;
   padding: 30px;
-  display: flex;
   justify-content: space-between;
-}
+  box-shadow: -10px 0 20px rgba(0, 0, 0, 0.1);
 
+}
